@@ -490,6 +490,8 @@ Trunk (unreleased changes)
     HDFS-823. CheckPointer should use addInternalServlet for image-fetching
     servlet (jghoman)
 
+    HDFS-456. Fix URI generation for windows file paths. (shv)
+
 Release 0.20.2 - Unreleased
 
   IMPROVEMENTS
